--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify/vue": "^5.0.0",
     "axios": "^1.13.2",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
