--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@iconify/vue": "^5.0.0",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.22",
